# Tab5_Launcher

./: .gitignore  .gitmodules  BMORCELLI_RESEARCH.md  CLAUDE.md  CMakeLists.txt  PRD.md  README.md  SPRINT_PLAN.md  partitions.csv  sdkconfig
.claude/: .credentials.json
.claude/projects/-home-paqurin/: e1b6ac25-9308-4d01-88b6-1589e3c0409c.jsonl  eda52180-29dd-441d-9b1d-d888f9719f9e.jsonl
.claude/projects/-home-paqurin-projects-m5tab5-emulator/: 9c37211e-ba04-45cb-9d48-2e925b892057.jsonl
.claude/projects/-home-paqurin-projects-m5tab5-lvgl/: 0a8ed45c-7034-4c02-b2d4-017191940922.jsonl  1e1e0a87-3612-4a65-8600-99c23f97d489.jsonl  57db0b18-080f-4b9e-809d-e0a66d893fc9.jsonl  61f1010a-dd61-4b0e-acb5-92f0e525843e.jsonl  7e1b5b7f-171e-4a1a-b007-903571d60e78.jsonl  b42ae35f-95ce-4bfc-bf65-b07361bd0d22.jsonl  c3e95890-8ebf-411f-8dd9-1e768b176058.jsonl  d91d5364-8707-4d88-9d4a-170cd1507111.jsonl  f25a45ac-14ae-49e5-ba2f-82e95e4b5f9a.jsonl
.claude/projects/-home-paqurin-projects-m5tab5-lvgl-os/: 1bc3da87-f37e-4f8e-a6fb-c179d33b2172.jsonl  39ec9bcc-cc03-4aa2-a7d4-291615502efc.jsonl  3b16a584-aa48-48db-a254-0e16273a4b5d.jsonl  85136e84-2f9c-493b-a6a5-317d983ef114.jsonl  c0cf284a-d702-4042-b80b-bcaa4a05a69f.jsonl  f223243a-249d-44c4-83b4-b521ec3dac0b.jsonl
.claude/projects/-mnt-c-Users-paqur/: 8e218040-f859-437c-9888-ff4b8dd940d7.jsonl
.claude/shell-snapshots/: snapshot-bash-1756141524637-r1kkog.sh  snapshot-bash-1756142382325-q9j9y3.sh  snapshot-bash-1756756499961-ywh853.sh  snapshot-bash-1756773053117-g7ss82.sh  snapshot-bash-1756779663768-5tgdk9.sh  snapshot-bash-1756818934789-2fl2oz.sh  snapshot-bash-1756820307714-m5p61g.sh  snapshot-bash-1756821060644-97i5q0.sh
.claude/statsig/: statsig.cached.evaluations.c948ef0731  statsig.failed_logs.658916400  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.claude/todos/: 61f1010a-dd61-4b0e-acb5-92f0e525843e-agent-61f1010a-dd61-4b0e-acb5-92f0e525843e.json  69dfd283-2f13-400f-aff5-3a4e4e968c96-agent-69dfd283-2f13-400f-aff5-3a4e4e968c96.json  9c37211e-ba04-45cb-9d48-2e925b892057-agent-9c37211e-ba04-45cb-9d48-2e925b892057.json  c0cf284a-d702-4042-b80b-bcaa4a05a69f-agent-c0cf284a-d702-4042-b80b-bcaa4a05a69f.json
commands/: archonstart.md  build-commands.md
components/m5stack-tab5/: .component_hash  CMakeLists.txt  m5stack_tab5.c
components/m5stack-tab5/include/bsp/: m5stack_tab5.h
components/micropython_wrapper/: CMakeLists.txt  micropython_wrapper.c  mpconfigport.h  python_executor.c  qstrdefs_port.h
components/micropython_wrapper/boards/ESP32_GENERIC_P4/: esp32p4_init.c  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
components/micropython_wrapper/boards/M5STACK_TAB5/: mpconfigboard.cmake  mpconfigboard.h
components/micropython_wrapper/include/: micropython_wrapper.h  python_executor.h
main/: CMakeLists.txt  config_manager.c  config_manager.h  file_operations.c  file_operations.h  firmware_boot.c  firmware_core.c  firmware_loader.c  firmware_loader.h  firmware_scanner.c  gui.c  gui.h  gui_events.c  gui_events.h  gui_file_browser_v2.c  gui_file_browser_v2.h  gui_manager.c  gui_manager.h  gui_progress.c  gui_progress.h  gui_pulldown_menu.c  gui_pulldown_menu.h  gui_screen_calculator.c  gui_screen_calculator.h  gui_screen_file_manager.c  gui_screen_firmware.c  gui_screen_main.c  gui_screen_progress.c  gui_screen_python_launcher.c  gui_screen_python_launcher.h  gui_screen_reboot.c  gui_screen_settings.c  gui_screen_settings.h  gui_screen_splash.c  gui_screen_text_editor.c  gui_screen_text_editor.h  gui_screen_tools.c  gui_screen_tools.h  gui_screen_wifi_setup.c  gui_screen_wifi_setup.h  (+25 more)
