idf_component_register(SRCS "gui_state.c" "gui_progress.c" "gui_events.c" "gui_screens.c" "launcher_main.c"
                            "hal.c"
                            "sd_manager.c"
                            "firmware_loader.c"
                            "gui_manager.c"
                    INCLUDE_DIRS ".")