idf_component_register(SRCS "file_operations.c" "gui_screen_reboot.c" "gui_state.c" 
                            "gui_progress.c" 
                            "gui_events.c" 
                            "gui_screens.c"
                            "gui_styles.c"
                            "gui_screen_main.c"
                            "gui_screen_file_manager.c"
                            "gui_screen_firmware.c"
                            "gui_screen_progress.c"
                            "gui_screen_splash.c"
                            "launcher_main.c"
                            "hal.c"
                            "sd_manager.c"
                            "firmware_core.c"
                            "firmware_scanner.c"
                            "firmware_boot.c"
                            "gui_manager.c"
                            "power_monitor.c"
                    INCLUDE_DIRS ".")