idf_component_register(SRCS "gui_pulldown_menu.c" "gui_screen_wifi_setup.c" "gui_screen_settings.c" "gui_file_browser_v2.c" "config_manager.c" "file_operations.c" "gui_screen_reboot.c" "gui_state.c" 
                            "gui_progress.c" 
                            "gui_events.c" 
                            "gui_screens.c"
                            "gui_styles.c"
                            "gui_screen_main.c"
                            "gui_screen_file_manager.c"
                            "gui_screen_firmware.c"
                            "gui_screen_progress.c"
                            "gui_screen_splash.c"
                            "gui_status_bar.c"
                            "launcher_main.c"
                            "hal.c"
                            "sd_manager.c"
                            "firmware_core.c"
                            "firmware_scanner.c"
                            "firmware_boot.c"
                            "gui_manager.c"
                            "power_monitor.c"
                            "wifi_manager.c"
                    INCLUDE_DIRS "."
                    REQUIRES nvs_flash json m5stack-tab5 spiffs esp_app_format espressif__esp_lcd_touch
                    PRIV_REQUIRES app_update fatfs)